Making some Modifications

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Vite App</title>
   </head>
   <body>
+    <style></style>
+    <div class="app">
+      <div class="ui"></div>
+      <canvas id="game"></canvas>
+    </div>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
